--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
-<title>Naamloos document</title>
+<title>Document</title>
 </head>
 
 <body>
+	<h1>Hello Trappist-1</h1>
+	<h2>New galaxy</h2>
 </body>
 </html>
