--- a/index.html
+++ b/index.html
@@ -6,7 +6,51 @@
 </head>
 
 <body>
-	<h1>Hello Trappist-1</h1>
-	<h2>New galaxy</h2>
+	<h3>Thomas Hayen</h3>
+	
+	<p>Geslacht: Man | Geboortedatum: 22/01/1998 | Nationaliteit: Belg</p>
+
+	
+	<p>Heb ervaring met de volgende programma's:</p>
+	
+	<li>Adobe Dreamweaver</li>
+	<li>Adobe Flash</li>
+	<li>Adobe Indesign</li>
+	<li>Adobe Photoshop</li>
+	<li>Adobe Illustrator</li>
+	<li>Adobe Premiere pro</li>
+	<li>Adobe After Effects</li>
+	
+	<h4>Onderwijs en opleiding</h4>
+	<p>2016 - … Bachelor in de Grafische en Digitale Media<br>
+Campus Mariakerke Arteveldehogeschool<br>
+Industrieweg 232, 
+9030 Gent</p>
+
+	<p>2014 - 2016 Multimedia Technieken<br>
+Technisch Instituut Don Bosco Halle <br>
+Lenniksesteenweg 2,
+1500 Halle</p>
+
+	<p>2012 - 2014 Elektronica-Elektriciteit<br>
+Technisch Instituut Don Bosco Halle <br>
+Lenniksesteenweg 2,
+1500 Halle</p>
+
+	<p>2010 - 2012 Sociale Technische Wetenschappen <br>
+Technisch Instituut Don Bosco Groot-Bijgaarden<br>                                             
+	Brusselstraat 285, 1702 Groot-Bijgaarden 
+	</p>
+	
+	<h4>Vaardigheden en attitudes</h4>
+	<li>Goed kunnen omgaan met anderen</li>
+	<li>Goede communicatieve vaardigheden</li>
+	<li>Verantwoordelijkheidszin en flexibiliteit</li>
+	<li>Stressbestendig</li>
+	<li>Creatief</li>
+	<li>Zeer veel ervaring met computers</li>
+	<li>Gemakkelijk aanpassen aan nieuwe situaties</li>
+
+
 </body>
 </html>
